# CS272_FinalProject

./: .gitignore
agents/highway_env/: ppo_highway.py  train_eval_dqn_highway.py
agents/intersection/: README.md  final project.pptm  intersection_envs.py  intersection_eval_violin.py  intersection_gray_returns.npy  intersection_lidar_returns.npy  intersection_plots.py  intersection_train.py  run_all.py  ~$final project.pptm
agents/merge/: eval_merge.py  plot_merge.py  train_merge.py
custom_env/: README.md  demo_narrow_street.py  eval_narrow.py  narrow_street.py  narrow_street_env.py  plot_narrow.py  train_narrow.py
narrow_safe_env/: ppo_narrow_agent copy.py
team7-custom-env/: .gitignore  README.md  eval_plot.py  pyproject.toml  requirements.txt  train.py
team7-custom-env/custom_env/: __init__.py  register.py
team7-custom-env/custom_env/envs/: __init__.py  my_env.py
team7-custom-env/custom_env/objects/: Pothole.py  __init__.py
team7-custom-env/custom_env/vehicle/: CustomVehicle.py  SuddenBrakingVehicle.py  __init__.py  ghost_vehicle.py
team7-custom-env/runs/ppo_team7/: learning_curve_returns.csv  monitor.csv
team7-custom-env/runs/ppo_team7/PPO_1/: events.out.tfevents.1763696417.Vibhas-MacBook-Pro.local.46424.0
team7-custom-env/runs/ppo_team7_fast/: eval_returns.csv  monitor.csv
team7-custom-env/runs/ppo_team7_fast/PPO_1/: events.out.tfevents.1763697438.Vibhas-MacBook-Pro.local.46855.0
team7-custom-env/runs/ppo_team7_fast/PPO_2/: events.out.tfevents.1763702262.Vibhas-MacBook-Pro.local.48219.0
team7-custom-env/scripts/: run_env.py
(+815 files in other folders)
